--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -2,8 +2,8 @@
     type="text" 
     [placeholder]="placeholder" 
     class="form-control"
+    (keyup)="onKeyPress( txtInput.value)"
     (keyup.enter)="emitValue(txtInput.value)"
     #txtInput
-
 >
 
