--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -1,12 +1,14 @@
 <h2>Por Capital</h2>
 <hr>
 
+
 <div class="row">
     <div class="col">
         <!-- SearchBox -->
          <!-- (onValue)="searchByCapital($event)" -->
          <shared-search-box
-        (onDebounce) = "searchByCapital($event)" 
+         (onDebounce)="searchByCapital($event)"
+         [initialValue]="initialValue"
          placeholder="Buscar por capital"></shared-search-box>
     </div>
 </div>
