--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -2,6 +2,7 @@
     type="text" 
     [placeholder]="placeholder" 
     class="form-control"
+    [value]="initialValue"
     (keyup)="onKeyPress( txtInput.value)"
     (keyup.enter)="emitValue(txtInput.value)"
     #txtInput
